--- a/front-end/home.html
+++ b/front-end/home.html
@@ -20,6 +20,16 @@
     </style>
 </head>
 <body>
+    <header style="background: #2d3e50; color: #fff; padding: 16px 0; margin-bottom: 24px;">
+        <div style="max-width: 600px; margin: auto; display: flex; justify-content: space-between; align-items: center;">
+            <span style="font-size: 1.5em; font-weight: bold;">FinanceTracker</span>
+            <nav>
+                <button style="margin-right: 8px;" onclick="location.href='home.html'">Home</button>
+                <button style="margin-right: 8px;" onclick="location.href='login.html'">LogIn</button>
+                <button onclick="location.href='register.html'">Register</button>
+            </nav>
+        </div>
+    </header>
     <div class="container">
         <h1>Personal Finance Tracker</h1>
         <div class="summary">
