--- a/front-end/home.html
+++ b/front-end/home.html
@@ -7,7 +7,7 @@
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; background: #f4f6f8; }
         h1 { color: #2d3e50; }
-        .container { max-width: 600px; margin: auto; background: #fff; padding: 24px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
+        .container { max-width: 800px; margin: auto; background: #fff; padding: 24px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
         form { display: flex; gap: 8px; margin-bottom: 16px; flex-wrap: wrap; }
         input, select, button { padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
         table { width: 100%; border-collapse: collapse; margin-bottom: 16px; }
@@ -43,21 +43,31 @@
             <button type="submit">Set Budget</button>
         </form>
         <form id="transactionForm">
-            <input type="text" id="desc" placeholder="Description" required>
             <input type="number" id="amount" placeholder="Amount (€)" step="0.01" required>
+            <input type="text" id="title" placeholder="Title" required>
+            <select id="category" required>
+                <option value="" disabled selected>Select Category</option>
+                <option value="Food">Food</option>
+                <option value="Housing">Housing</option>
+                <option value="Hobbies">Hobbies</option>
+                <option value="Pay">Pay</option>
+                <option value="Gift">Gift</option>
+                <option value="Other">Other</option>
+            </select>
             <select id="type">
-                <option value="income">Income</option>
-                <option value="expense">Expense</option>
+            <option value="income">Income</option>
+            <option value="expense">Expense</option>
             </select>
             <button type="submit">Add</button>
         </form>
         <table>
             <thead>
                 <tr>
-                    <th>Description</th>
                     <th>Amount (€)</th>
+                    <th>Title</th>
+                    <th>Category</th>
                     <th>Type</th>
-                    <th>Date</th>
+                    <th></th>
                     <th></th>
                 </tr>
             </thead>
@@ -83,10 +93,9 @@
             transactions.forEach((t, i) => {
                 const tr = document.createElement('tr');
                 tr.innerHTML = `
-                    <td>${t.desc}</td>
+                    <td>${t.amount.toFixed(2)}</td>
                     <td>${t.amount.toFixed(2)}</td>
                     <td class="${t.type}">${t.type.charAt(0).toUpperCase() + t.type.slice(1)}</td>
-                    <td>${t.date}</td>
                     <td><button onclick="deleteTransaction(${i})">Delete</button></td>
                 `;
                 tbody.appendChild(tr);
@@ -118,8 +127,7 @@
             transactions.push({
                 desc,
                 amount,
-                type,
-                date: new Date().toLocaleDateString()
+                type
             });
             this.reset();
             renderTransactions();
@@ -147,6 +155,53 @@
             const b = localStorage.getItem('finance_budget');
             if (t) transactions = JSON.parse(t);
             if (b) budget = parseFloat(b);
+        }
+
+        // Fix transaction form handling
+        document.getElementById('transactionForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const amount = parseFloat(document.getElementById('amount').value);
+            const title = document.getElementById('title').value.trim();
+            const category = document.getElementById('category').value;
+            const type = document.getElementById('type').value;
+            if (!title || isNaN(amount) || amount <= 0 || !category) return;
+
+            if (type === 'expense') {
+            const expenses = transactions.filter(t => t.type === 'expense').reduce((sum, t) => sum + t.amount, 0);
+            if ((expenses + amount) > budget) {
+                alert('Expense cannot exceed the budget.');
+                return;
+            }
+            }
+
+            transactions.push({
+            amount,
+            title,
+            category,
+            type
+            });
+            this.reset();
+            renderTransactions();
+            updateSummary();
+            saveData();
+        });
+
+        // Update renderTransactions to match transactionForm data
+        function renderTransactions() {
+            const tbody = document.getElementById('transactions');
+            tbody.innerHTML = '';
+            transactions.forEach((t, i) => {
+            const tr = document.createElement('tr');
+            tr.innerHTML = `
+                <td>${t.amount.toFixed(2)}</td>
+                <td>${t.title || ''}</td>
+                <td>${t.category || ''}</td>
+                <td class="${t.type}">${t.type.charAt(0).toUpperCase() + t.type.slice(1)}</td>
+                <td><button onclick="deleteTransaction(${i})">Delete</button></td>
+                <td><button onclick="editTransaction(${i})">Edit</button></td>
+            `;
+            tbody.appendChild(tr);
+            });
         }
 
         // Expose deleteTransaction to global scope
