--- a/front-end/home.html
+++ b/front-end/home.html
@@ -24,9 +24,7 @@
         <div style="max-width: 600px; margin: auto; display: flex; justify-content: space-between; align-items: center;">
             <span style="font-size: 1.5em; font-weight: bold;">FinanceTracker</span>
             <nav>
-                <button style="margin-right: 8px;" onclick="location.href='home.html'">Home</button>
-                <button style="margin-right: 8px;" onclick="location.href='login.html'">LogIn</button>
-                <button onclick="location.href='register.html'">Register</button>
+                <button style="margin-right: 8px;" onclick="location.href='index.html'">LogOut</button>
             </nav>
         </div>
     </header>
