--- a/front-end/home.html
+++ b/front-end/home.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8">
     <title>Personal Finance Tracker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; background: #f4f6f8; }
-        h1 { color: #2d3e50; }
-        .container { max-width: 800px; margin: auto; background: #fff; padding: 24px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
-        form { display: flex; gap: 8px; margin-bottom: 16px; flex-wrap: wrap; }
-        input, select, button { padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
-        table { width: 100%; border-collapse: collapse; margin-bottom: 16px; }
-        th, td { padding: 8px; border-bottom: 1px solid #eee; text-align: left; }
-        th { background: #f0f2f5; }
-        .summary { display: flex; justify-content: space-between; margin-bottom: 16px; }
-        .income { color: #2ecc71; }
-        .expense { color: #e74c3c; }
-        .budget { color: #2980b9; }
-    </style>
+    <link rel="stylesheet" href="./css/style_home.css" />
 </head>
 <body>
     <header style="background: #2d3e50; color: #fff; padding: 16px 0; margin-bottom: 24px;">
