--- a/front-end/home.html
+++ b/front-end/home.html
@@ -77,5 +77,6 @@
             <tbody id="transactions"></tbody>
         </table>
     </div>
+    <script type="module" src="js/home.js"></script>
 </body>
 </html>
