--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
   <link rel="stylesheet" href="./css/style_login.css" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <div class="login-container">
-    <form class="login-form">
+    <form id="loginForm" class="login-form">
       <h2>Sign In</h2>
 
       <div class="input-group">
@@ -28,29 +27,36 @@
   </div>
 
   <script>
-    document.querySelector('form').addEventListener('submit', async function (e) {
+    document.getElementById('loginForm').addEventListener('submit', async function(e) {
       e.preventDefault();
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
 
-      const email = document.querySelector('#email').value;
-      const password = document.querySelector('#password').value;
+      try {
+        const response = await fetch(
+          'https://finance-app-cne.azurewebsites.net/api/httptriggerauth',
+          {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ email, password })
+          }
+        );
 
-      const response = await fetch('https://finance-app-cne.azurewebsites.net/api/httptriggerauth', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, password })
-      });
+        if (!response.ok) {
+          const msg = await response.text();
+          throw new Error(msg || response.statusText);
+        }
 
-      if (response.ok) {
-        alert('Login successful!');
-        window.location.href = './home.html';
-      } else {
-        const error = await response.text();
-        alert('Login failed: ' + error);
+        const { token } = await response.json();
+        // Store JWT under 'jwt' key
+        localStorage.setItem('jwt', token);
+        // Redirect to home/dashboard
+        window.location.href = 'home.html';
+      } catch (err) {
+        console.error('Login failed:', err);
+        alert('Login failed: ' + err.message);
       }
     });
   </script>
 </body>
 </html>
-
-
-
