--- a/front-end/register.html
+++ b/front-end/register.html
@@ -46,7 +46,7 @@
       const email = document.querySelector('#email').value;
       const password = document.querySelector('#password').value;
 
-      const response = await fetch('http://localhost:7071/api/httptriggerregisteruser', {
+      const response = await fetch('https://finance-app-cne.azurewebsites.net/api/httptriggerregisteruser', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ firstName, lastName, email, password })
