fixed hardcoded requests

--- a/front-end/home.html
+++ b/front-end/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style_home.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="./js/global.js" defer></script>
     <script src="./js/logout.js" defer></script>
     <script src="./js/overview.js" defer></script>
 </head>
