wrong url fixed

--- a/front-end/home.html
+++ b/front-end/home.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="./js/global.js" defer></script>
     <script src="./js/logout.js" defer></script>
+    <script src="js/home.js" defer></script>
     <script src="./js/overview.js" defer></script>
 </head>
 <body>
@@ -78,6 +79,5 @@
             <tbody id="transactions"></tbody>
         </table>
     </div>
-    <script type="module" src="js/home.js"></script>
 </body>
 </html>
