--- a/front-end/register.html
+++ b/front-end/register.html
@@ -6,6 +6,8 @@
   <title>Register</title>
   <link rel="stylesheet" href="./css/style_register.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="./js/global.js" defer></script>
+  <script src="./js/register.js" defer></script>
 </head>
 <body>
   <div class="login-container">
@@ -36,31 +38,6 @@
       <p class="redirect">Already have an account? <a href="./index.html">Log in</a></p>
     </form>
   </div>
-
-  <script>
-    document.querySelector('form').addEventListener('submit', async function (e) {
-      e.preventDefault();
-
-      const firstName = document.querySelector('#firstName').value;
-      const lastName = document.querySelector('#lastName').value;
-      const email = document.querySelector('#email').value;
-      const password = document.querySelector('#password').value;
-
-      const response = await fetch('https://finance-app-cne.azurewebsites.net/api/httptriggerregisteruser', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ firstName, lastName, email, password })
-      });
-
-      if (response.ok) {
-        alert('Registration successful! Redirecting to login...');
-        window.location.href = './index.html';
-      } else {
-        const error = await response.text();
-        alert('Registration failed: ' + error);
-      }
-    });
-  </script>
 </body>
 </html>
 
