wired update budget to frontend
Added a new button to update the budget

--- a/front-end/home.html
+++ b/front-end/home.html
@@ -46,6 +46,7 @@
         <form id="budgetForm">
             <input type="number" id="budgetInput" placeholder="Set monthly budget (€)" min="0" required>
             <button id="setBudgetBtn" type="button">Set Budget</button>
+            <button id="updateBudgetBtn" type="button">Update Budget</button>
         </form>
         <form id="transactionForm">
             <input type="number" id="amount" placeholder="Amount (€)" step="0.01" required>
