--- a/front-end/home.html
+++ b/front-end/home.html
@@ -41,7 +41,7 @@
             <div class="income">Income: €<span id="totalIncome">0</span></div>
             <div class="expense">Expenses: €<span id="totalExpenses">0</span></div>
             <div class="budget">Budget: €<span id="budget">0</span></div>
-            <div class="budget">Balance: €<span id="balance">0</span></div>
+            <div class="budget">Left in budget: €<span id="balance">0</span></div>
         </div>
         <form id="budgetForm">
             <input type="number" id="budgetInput" placeholder="Set monthly budget (€)" min="0" required>
