--- a/front-end/home.html
+++ b/front-end/home.html
@@ -12,73 +12,73 @@
     <script src="./js/overview.js" defer></script>
 </head>
 <body>
-    <header style="background: #2d3e50; color: #fff; padding: 16px 0; margin-bottom: 24px;">
-        <div style="max-width: 600px; margin: auto; display: flex; justify-content: space-between; align-items: center;">
-            <span style="font-size: 1.5em; font-weight: bold;">FinanceTracker</span>
-            <nav>
-                <button id="logoutBtn" style="margin-right: 8px;">LogOut</button>
-            </nav>
-        </div>
-    </header>
-    <div style="display: flex; gap: 32px;">
-    <div class="category-summary-wrapper">
-        <h2>Spent per Category</h2>
-        <table id="categorySummaryTable">
+  <div class="main-container">
+    <div class="dashboard-card">
+      <header>
+        <span class="dashboard-title">FinanceTracker</span>
+        <button id="logoutBtn" class="logout-btn">Log Out</button>
+      </header>
+      <div class="dashboard-content">
+        <div class="category-summary-wrapper">
+          <h2>Spent per Category</h2>
+          <table id="categorySummaryTable">
             <thead>
-                <tr>
-                    <th>Category</th>
-                    <th>Spent (€)</th>
-                </tr>
+              <tr>
+                <th>Category</th>
+                <th>Spent (€)</th>
+              </tr>
             </thead>
             <tbody>
             </tbody>
-        </table>
-    </div>
-    <div style="flex: 1;">
-    <div class="container">
-        <h1>Personal Finance Tracker</h1>
-        <div class="summary">
+          </table>
+        </div>
+        <div class="tracker-section">
+          <h1>Personal Finance Tracker</h1>
+          <div class="summary">
             <div class="income">Income: €<span id="totalIncome">0</span></div>
             <div class="expense">Expenses: €<span id="totalExpenses">0</span></div>
             <div class="budget">Budget: €<span id="budget">0</span></div>
             <div class="budget">Left in budget: €<span id="balance">0</span></div>
-        </div>
-        <form id="budgetForm">
+          </div>
+          <form id="budgetForm" class="budget-form">
             <input type="number" id="budgetInput" placeholder="Set monthly budget (€)" min="0" required>
             <button id="setBudgetBtn" type="button">Set Budget</button>
             <button id="updateBudgetBtn" type="button">Update Budget</button>
-        </form>
-        <form id="transactionForm">
+          </form>
+          <form id="transactionForm" class="transaction-form">
             <input type="number" id="amount" placeholder="Amount (€)" step="0.01" required>
             <input type="text" id="title" placeholder="Title" required>
             <select id="category" required>
-                <option value="" disabled selected>Select Category</option>
-                <option value="Food">Food</option>
-                <option value="Housing">Housing</option>
-                <option value="Hobbies">Hobbies</option>
-                <option value="Pay">Pay</option>
-                <option value="Gift">Gift</option>
-                <option value="Other">Other</option>
+              <option value="" disabled selected>Select Category</option>
+              <option value="Food">Food</option>
+              <option value="Housing">Housing</option>
+              <option value="Hobbies">Hobbies</option>
+              <option value="Pay">Pay</option>
+              <option value="Gift">Gift</option>
+              <option value="Other">Other</option>
             </select>
-            <select id="type">
-            <option value="income">Income</option>
-            <option value="expense">Expense</option>
+            <select id="type" required>
+              <option value="income">Income</option>
+              <option value="expense">Expense</option>
             </select>
-            <button type="submit">Add</button>
-        </form>
-        <table>
+            <button type="submit">Add Transaction</button>
+          </form>
+          <table id="transactionsTable">
             <thead>
-                <tr>
-                    <th>Amount (€)</th>
-                    <th>Title</th>
-                    <th>Category</th>
-                    <th>Type</th>
-                    <th></th>
-                    <th></th>
-                </tr>
+              <tr>
+                <th>Amount</th>
+                <th>Title</th>
+                <th>Category</th>
+                <th>Type</th>
+                <th></th>
+              </tr>
             </thead>
-            <tbody id="transactions"></tbody>
-        </table>
+            <tbody id="transactions">
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
 </html>
